# dalet-rs

./: Cargo.toml  README.md
src/: lib.rs  typed.rs  types.rs
src/daletpack/: mod.rs
src/parsers/: gemtext.rs
