[package]
name = "dalet"
version = "1.0.0-pre.33"
edition = "2021"
authors = ["artegoser"]
license = "MIT"
description = "Dalet implementation in Rust"
repository = "https://github.com/tempoworks/dalet-rs"
homepage = "https://github.com/tempoworks/dalet-rs/tree/main/"
readme = "./README.md"
keywords = ["dalet"]
categories = ["compression", "compilers", "encoding"]

[[bin]]
name = "dalet"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.38", features = ["derive"], optional = true }
num_enum = "0.7.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"

enum-procs = "0.3.0"

chumsky = { version = "0.10.1", optional = true }
ariadne = { version = "0.5.1", optional = true }
bitcode = { version = "0.6.6", features = ["serde"], optional = true }
flate2 = { version = "1.1.1", optional = true }

[features]
default = ["types", "daletpack", "daletmark", "cli"]
types = []
daletpack = ["types", "dep:bitcode", "dep:flate2"]
daletmark = ["types", "daletpack", "dep:chumsky", "dep:ariadne"]
cli = ["types", "daletpack", "daletmark", "dep:clap"]
